--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -5,5 +5,5 @@
     "outDir": "lib"
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["src/**/*.test.ts", "src/__tests__", "node_modules"]
+  "exclude": ["src/**/*.spec.ts", "node_modules"]
 }
