--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,6 @@
     "module": "commonjs",
     "sourceMap": true,
     "strict": true,
-    "skipLibCheck": true,
     "declaration": true,
     "esModuleInterop": true,
     "noUnusedLocals": true,
@@ -15,7 +14,6 @@
     "listEmittedFiles": false,
     "listFiles": false,
     "pretty": true,
-    "lib": ["es2017", "dom"],
-    "outDir": "lib"
+    "lib": ["es2017", "dom"]
   }
 }
