--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,13 @@
   "semi": true,
   "trailingComma": "all",
   "singleQuote": true,
-  "printWidth": 120
+  "printWidth": 120,
+  "overrides": [
+    {
+      "files": ["README.md"],
+      "options": {
+        "printWidth": 80
+      }
+    }
+  ]
 }
