--- a/package.json
+++ b/package.json
@@ -19,19 +19,23 @@
     "build": "tsc --project tsconfig.build.json",
     "test": "jest -c jest.config.js",
     "clean": "rimraf lib",
-    "lint": "eslint -c .eslintrc.js src/**/*.ts"
+    "lint": "eslint -c .eslintrc.js src/**/*.ts",
+    "docs": "rimraf build/docs && typedoc --options typedoc.json",
+    "docs:publish": "gh-pages -m \"[ci skip] Updates\" -d build/docs"
   },
   "devDependencies": {
     "@types/jest": "^26.0.19",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
     "eslint": "^7.16.0",
+    "gh-pages": "^3.1.0",
     "husky": "^4.3.6",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
     "rimraf": "^3.0.2",
     "ts-jest": "^26.4.4",
+    "typedoc": "^0.20.9",
     "typescript": "^4.1.3"
   },
   "husky": {
